# eintel-rs

./: .buildconfig  .gitignore  Cargo.toml  universe.bson
data/: ships.txt  stop_words.txt  universe.json  universe.sqlite3
data/eve-universe/: Cargo.toml
data/eve-universe/src/: data.rs  lib.rs  ships.rs
src/: _main.rs  audio_notification.rs  channel.rs  desktop_notification.rs  intel.rs  intel_channel.rs  lib.rs  local_channel.rs  main.rs  models.rs  notifications.rs  universe.rs
src/app/: mod.rs
src/chat/: channel.rs  chat.rs  chat_file.rs  header.rs  mod.rs  utf16.rs
src/config/: mod.rs
src/errors/: mod.rs
src/events/: mod.rs
src/intel/: intel.rs  message.rs  mod.rs
src/notifications/: audio_notification.rs  debounced_message.rs  mod.rs  tts.rs
tools/: gen-ships  gen-stop-words  gen-universe  make-cache  sde.rb
