[package]
name = "eintel"
version = "0.1.0"
authors = ["vvlad"]

[dependencies]
notify = "4.0.0"
regex = "0.2"
encoding = "0.2"
lazy_static = "1.0.0"
rust-embed = "0.3.0"
serde_json = "*"
serde_derive = "*"
serde = "*"
algorithms = { git = "https://github.com/vvlad/rust-algorithms.git" }
r2d2_sqlite = "*"
r2d2 = "*"
rusqlite = "*"
eve-universe = { path = "data/eve-universe" }
