[package]
name = "eintel"
version = "0.1.0"
authors = ["vvlad"]

[dependencies]
memmap = "0.6.2"
notify = "4.0.3"
regex = "1.0.0"
encoding = "0.2.33"
chrono = "0.4.2"
log = {version = "0.4.2"}
pretty_env_logger = "0.2.3"
punkt = "1.0.4"
rusoto_polly = "0.32.0"
rusoto_core = "0.32.0"
xml-rs = "0.8"
lewton = "0.8.0"
alto = "3.0.1"
bson = "0.11"
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
lazy_static = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.1.3"

[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "3.4.2"

[target.'cfg(windows)'.dependencies]
winrt = {version = "0.5.0",features = ["windows-data","windows-ui"]}
